# CSPICE

./: CSPICE.podspec  LICENSE  Package.swift  README.md  build-android.sh  build.sh
CSPICE/: Asteroids.cpp  Asteroids.h  Asteroids.mm  Directory.h  Directory.mm  SPKFileInfo.cpp  SPKFileInfo.h  states.cpp
CSPICE.xcodeproj/: project.pbxproj
CSPICE/CSPICE/src/cspice/: spkobj_c.c  system_.c
android/: .gitignore  local.properties.example  settings.gradle.kts
common/: CMakeLists.txt
common/include/CSPICE/: AsteroidNames.h  Asteroids.h  CSPICE.h
common/src/: Directory.cpp
